--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -11,19 +11,6 @@ services:
     ports:
       - "5432:5432"
 
-  kong:
-    image: supabase/kong:v2.8.1
-    restart: always
-    environment:
-      KONG_DATABASE: "off"
-      KONG_DECLARATIVE_CONFIG: /var/lib/kong/kong.yml
-      KONG_ADMIN_LISTEN: "0.0.0.0:8001"
-    ports:
-      - "8000:8000"
-      - "8001:8001"
-    volumes:
-      - ./kong.yml:/var/lib/kong/kong.yml
-
   studio:
     image: supabase/studio:20240109-2f93816
     restart: always
@@ -32,7 +19,7 @@ services:
     depends_on:
       - db
     environment:
-      SUPABASE_URL: http://kong:8000
+      SUPABASE_URL: http://rest:3000
       SUPABASE_ANON_KEY: eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJyb2xlIjoiYW5vbiIsImlhdCI6MTY5ODg4ODg4OH0.0RwBDOLQZXrhiwfwlihtz8aMKYN-LFtcU5UJ5dP47sY
       SUPABASE_SERVICE_ROLE_KEY: eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJyb2xlIjoic2VydmljZV9yb2xlIiwiaWF0IjoxNjk4ODg4ODg4fQ.qyHRaUwsMnXYntUm5hcfLUj5rBdT4vZ6es-Bu9VqNlI
       DB_HOST: db
